[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/Juice/juicebox.png" type="Texture" id=1]
[ext_resource path="res://assets/Cards/card_back.png" type="Texture" id=2]
[ext_resource path="res://fonts/ld52/ld52_def_large.tres" type="DynamicFont" id=3]
[ext_resource path="res://components/RewardCard.gd" type="Script" id=4]
[ext_resource path="res://fonts/ld52/ld52_def_normal.tres" type="DynamicFont" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.670588, 0, 0.741176, 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.580392 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxFlat" id=7]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[node name="RewardCard" type="PanelContainer"]
margin_right = 200.0
margin_bottom = 300.0
rect_min_size = Vector2( 200, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 6 )
script = ExtResource( 4 )

[node name="FrontTextureRect" type="TextureRect" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 198.0
margin_bottom = 298.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 198.0
margin_bottom = 298.0
custom_constants/margin_left = 5

[node name="NameLabel" type="Label" parent="MarginContainer"]
margin_left = 5.0
margin_right = 88.0
margin_bottom = 39.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 5 )
text = "Alien"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 198.0
margin_bottom = 298.0
custom_constants/margin_right = 5

[node name="CountLabel" type="Label" parent="MarginContainer2"]
margin_left = 123.0
margin_top = 238.0
margin_right = 191.0
margin_bottom = 296.0
size_flags_horizontal = 8
size_flags_vertical = 12
custom_fonts/font = ExtResource( 3 )
text = "+1"
align = 1

[node name="BackTextureRect" type="TextureRect" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 198.0
margin_bottom = 298.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="PickButton" type="Button" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 198.0
margin_bottom = 298.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 198.0
margin_bottom = 298.0
mouse_filter = 2
custom_styles/panel = SubResource( 7 )

[connection signal="pressed" from="PickButton" to="." method="_on_PickButton_pressed"]
